# lnotes

./: .clang-format  .editorconfig  .gitignore  AGENTS.md  CHANGELOG  CLAUDE.md  CMakeLists.txt  LICENSE  Makefile  README.md
.github/workflows/: ci.yml
docs/design/: encryption-at-rest.md
scripts/: install.sh  uninstall.sh
src/: main.c  notes.c  notes.h  search.c  search.h  utils.c  utils.h
tests/: test_add_command.sh  test_category_command.sh  test_ls_command.sh  test_main.c  test_raise_command.sh  test_scripts.sh  test_search_command.sh  test_trash_command.sh
